--- a/main.html
+++ b/main.html
@@ -3,6 +3,28 @@
 <head>
 </head>
 <body>
-
+<table>
+	<tr>
+		<th>Components</th>
+		
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td>
+			h2 Element
+		</td>
+		<td>
+			Must be used to create a subheading
+		</td>
+	</tr>
+		<tr>
+		<td>
+		Subheading Content
+		</td>
+		<td>
+			The content of the h2 element must be the word "Acciojob"
+		</td>
+	</tr>
+</table>
 </body>
 </html>
