--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	</tr>
 	<tr>
 		<td>
-			h2 Element
+			<strong>h2 Element</strong>
 		</td>
 		<td>
 			Must be used to create a subheading
@@ -19,7 +19,7 @@
 	</tr>
 		<tr>
 		<td>
-		Subheading Content
+		<strong>Subheading Content</strong>
 		</td>
 		<td>
 			The content of the h2 element must be the word "Acciojob"
