--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 		<strong>Subheading Content</strong>
 		</td>
 		<td>
-			The content of the h2 element must be the word "Acciojob"
+			The content of the h2 element must be the word <span>"Acciojob"</span>
 		</td>
 	</tr>
 </table>
